Update Sarah's title, fix inconsistent casing/title names

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -434,7 +434,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Elliot Lines Smith</h2>
-                  <h3 class="bio-sub">Developer</h3>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-elliot.jpg" | prepend: site.baseurl }}" alt="Elliot Lines Smith" />
                   </div>
@@ -673,7 +673,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Joshua Vial</h2>
-                  <h3 class="bio-sub">Director, developer &amp; mentor</h3>
+                  <h3 class="bio-sub">Director, Developer &amp; Mentor</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-josh.jpg" | prepend: site.baseurl }}" alt="Joshua Vial" />
                   </div>
@@ -711,7 +711,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Julia Tokumaru</h2>
-                  <h3 class="bio-sub">Front-end Developer</h3>
+                  <h3 class="bio-sub">Front End Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/julia-hide-b25b6349/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1111,7 +1111,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Sarah Jackson</h2>
-                  <h3 class="bio-sub">Intermediate Full Stack Developer</h3>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/sarah-jackson-375821b9" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1398,7 +1398,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Subhra Borkakati</h2>
-                  <h3 class="bio-sub">Full-stack Developer</h3>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/subhramitra/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
