Add James G to People page

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -568,6 +568,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- James G -->
+      <div id="person-jamesg" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="James Gunn" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">James Gunn</h2>
+                  <h3 class="bio-sub">Account Manager</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/james-gunn-2a485951/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <!-- <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-james.jpg" | prepend: site.baseurl }}" alt="James Gunn" />
+                  </div> -->
+                </div>
+                <div class="bio-body">
+                  <p>Bio coming soon!</p>
+                  <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jamesgunn"></div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">James G</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- James P-->
       <div id="person-james" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
