Add bios for Sarah and JG, update JP title

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -585,7 +585,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">James Gunn</h2>
-                  <h3 class="bio-sub">Account Manager</h3>
+                  <h3 class="bio-sub">Partner Outcomes Manager</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/james-gunn-2a485951/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -596,7 +596,7 @@ menuorder: 4
                   </div> -->
                 </div>
                 <div class="bio-body">
-                  <p>Bio coming soon!</p>
+                  <p>A fanatical rock climber and drum and bass head, James says things like &ldquo;super duper rad&rdquo;, owns five named chickens and counts an avocado tree among his prized possessions. He’s relationship and people focused, ensuring we are delivering value in our partnerships. James is most at home in the complex, dynamic and nuanced problem spaces we specialise in and is always finding ways digital practices can transform and improve our future. He has more than 15 years experience in projects and roles spanning geospatial, product development, data analytics, change management and process improvement.</p>
                   <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jamesgunn"></div> -->
                 </div>
               </div>
@@ -626,7 +626,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">James Pearson</h2>
-                  <h3 class="bio-sub">Resident Anthropologist</h3>
+                  <h3 class="bio-sub">Head of Partner Outcomes</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/james-pearson-84684376/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1163,7 +1163,7 @@ menuorder: 4
                   </div> -->
                 </div>
                 <div class="bio-body">
-                  <p>Bio coming soon!</p>
+                  <p>It's not too often we hire someone who &ldquo;specialised in excavators&rdquo;. Sarah is most definitely the first, bringing her automation experience alongside her galaxy-inspired wardrobe and an awfully long list of hobbies and passions. She has serious chops coding in C++ and Python and is always hungry for the next challenge as she continues to add languages to her arsenal. Yoga teacher, surfer, moto-head, snowboarder, brewer, enthusiastic eater and keen traveller, Sarah also claims she can &ldquo;squat and deadlift most humans&rdquo; and would be happy to prove it.</p>
                   <!-- <div class="fancy-pants-font js-blog-link" data-blog-link="/author/shannon"></div> -->
                 </div>
               </div>
