--- a/src/people/index.html
+++ b/src/people/index.html
@@ -572,7 +572,7 @@ menuorder: 4
       <div id="person-jamesg" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="James Gunn" />
+          <img class="person-image" src="{{ "/img/people/james-gunn.png " | prepend: site.baseurl }}" alt="James Gunn" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -591,9 +591,9 @@ menuorder: 4
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
-                  <!-- <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-james.jpg" | prepend: site.baseurl }}" alt="James Gunn" />
-                  </div> -->
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-james-gunn.jpg" | prepend: site.baseurl }}" alt="James Gunn" />
+                  </div>
                 </div>
                 <div class="bio-body">
                   <p>A fanatical rock climber and drum and bass head, James says things like &ldquo;super duper rad&rdquo;, owns five named chickens and counts an avocado tree among his prized possessions. He’s relationship and people focused, ensuring we are delivering value in our partnerships. James is most at home in the complex, dynamic and nuanced problem spaces we specialise in and is always finding ways digital practices can transform and improve our future. He has more than 15 years experience in projects and roles spanning geospatial, product development, data analytics, change management and process improvement.</p>
@@ -1139,7 +1139,7 @@ menuorder: 4
       <div id="person-sarah" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Sarah Jackson" />
+          <img class="person-image" src="{{ "/img/people/sarah-jackson.png " | prepend: site.baseurl }}" alt="Sarah Jackson" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -1158,9 +1158,9 @@ menuorder: 4
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
                     </a>
                   </span>
-                  <!-- <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-shannon.jpg" | prepend: site.baseurl }}" alt="Sarah Jackson" />
-                  </div> -->
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-sarah-jackson.jpg" | prepend: site.baseurl }}" alt="Sarah Jackson" />
+                  </div>
                 </div>
                 <div class="bio-body">
                   <p>It's not too often we hire someone who &ldquo;specialised in excavators&rdquo;. Sarah is most definitely the first, bringing her automation experience alongside her galaxy-inspired wardrobe and an awfully long list of hobbies and passions. She has serious chops coding in C++ and Python and is always hungry for the next challenge as she continues to add languages to her arsenal. Yoga teacher, surfer, moto-head, snowboarder, brewer, enthusiastic eater and keen traveller, Sarah also claims she can &ldquo;squat and deadlift most humans&rdquo; and would be happy to prove it.</p>
