Update Rae, H and Rhys' titles

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -673,7 +673,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Jonathan Hollingsworth</h2>
-                  <h3 class="bio-sub">Director of Software Development</h3>
+                  <h3 class="bio-sub">Director of Engineering</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/jon-hollingsworth-6b13145/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1070,7 +1070,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Rae Catley-Maurice</h2>
-                  <h3 class="bio-sub">Project Lead</h3>
+                  <h3 class="bio-sub">Chapter Lead (Analysis, Design, Delivery)</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/rae-catley-maurice-0347ab8" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1111,7 +1111,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Rhys Davies</h2>
-                  <h3 class="bio-sub">Business Development</h3>
+                  <h3 class="bio-sub">Chapter Lead (Engineering)</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/rhys-davies-5323965a/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
